[metadata]
name = pbr
author = James T. Horine
author-email = james.horine@gmail.com
summary = Bible study website
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://www.pleromabiblechurch.org
project_urls =
    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Docker
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    manna
